--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-tauri-app",
+  "name": "example-crud-tauri-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
